--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     rel="stylesheet">
   </head>
   <body>
-    <h1>Broadway Design</h1>
+    <div id=home>
+      <h1>Broadway Design</h1>
       <nav>
         <p><a href="#home">Home</a></p>
         <p><a href="#process">Process</a></p>
@@ -14,21 +15,30 @@
         <p><a href="#team">Team</a></p>
         <p><a href="#contact">Contact</a></p>
       </nav>
+    </div>
     <div id="process">
       <h2>Our Process</h2>
         <h3>Identity</h3>
+          <p>We focus on the most important details.</p>
         <h3>Understand</h3>
+          <p>We study our projects inside and out.</p>
         <h3>Execute</h3>
+          <p>We put everything we have into our work.</p>
     </div>
     <h3>Designed in New York</h3>
     <div id="work">
       <h3>Portfolio</h3>
+        <p>Coming Soon</p>
     </div>
     <div id="team">
       <h3>Team</h3>
+        <p>We're Hiring!</p>
     </div>
     <div id="contact">
       <h3>Contact</h3>
+        <p>Phone: (555)-555-5555</p>
+        <p>E-mail: test@example.com</p>
+        <p>Twitter: @test</p>
     </div>
   </body>
 </html>
