--- a/index.html
+++ b/index.html
@@ -40,5 +40,15 @@
         <p>E-mail: test@example.com</p>
         <p>Twitter: @test</p>
     </div>
+    <!-- Footer for the website -->
+    <div class="footer">
+      <p>© Broadway 2016
+        <a href="#home">Home</a>
+        <a href="#process">Process</a>
+        <a href="#work">Work</a>
+        <a href="#team">Team</a>
+        <a href="#contact">Team</a>
+      </p>
+    </div>
   </body>
 </html>
