--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     rel="stylesheet">
   </head>
   <body>
-    <div id=home>
+    <!-- Header -->
+    <div id="home">
       <h1>Broadway Design</h1>
-      <nav>
-        <p><a href="#home">Home</a></p>
-        <p><a href="#process">Process</a></p>
-        <p><a href="#work">Work</a></p>
-        <p><a href="#team">Team</a></p>
-        <p><a href="#contact">Contact</a></p>
-      </nav>
+        <nav>
+          <p><a href="#home">Home</a></p>
+          <p><a href="#process">Process</a></p>
+          <p><a href="#work">Work</a></p>
+          <p><a href="#team">Team</a></p>
+          <p><a href="#contact">Contact</a></p>
+        </nav>
     </div>
     <div id="process">
       <h2>Our Process</h2>
@@ -28,7 +29,7 @@
         <h3>Execute</h3>
           <p>We put everything we have into our work.</p>
     </div>
-    <h3>Designed in New York</h3>
+    <h3 class="sub-header">Designed in New York</h3>
     <div id="work">
       <h3>Portfolio</h3>
         <p>Coming Soon</p>
@@ -44,14 +45,12 @@
         <p>Twitter: @test</p>
     </div>
     <!-- Footer for the website -->
-    <div class="footer">
-      <p>© Broadway 2016
-        <a href="#home">Home</a>
-        <a href="#process">Process</a>
-        <a href="#work">Work</a>
-        <a href="#team">Team</a>
-        <a href="#contact">Team</a>
-      </p>
-    </div>
+    <p class="footer"><span id="copy">© Broadway 2016</span>
+      <a href="#home">Home</a>
+      <a href="#process">About</a>
+      <a href="#work">Work</a>
+      <a href="#team">Team</a>
+      <a href="#contact">Team</a>
+    </p>
   </body>
 </html>
